Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -150,7 +150,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
           color: @font-swatch6-color;
           line-height: @font-swatch6-line-height;
           letter-spacing: @font-swatch6-letter-spacing;
-          text-align: right;
           &:hover {
             color: @font-swatch6-color-hover;
             text-decoration: none;
@@ -161,7 +160,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
         }
         &.folder {
           cursor: pointer;
-          text-align: right;
           padding: 0;
           .text {
             display: block;
